<resources>
    <string name="app_name">TeamCapstone</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_add">Add</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>
    <string name="aspirasi">Aspirasi</string>
    <string name="laporan">Laporan</string>
    <string name="event">Event</string>
    <string name="tambah_aktivitas">Tambah Aktivitas</string>
    <string name="tipe">tipe :</string>
    <string name="judul">Judul</string>
    <string name="location">Location</string>
    <string name="detail">Detail</string>
    <string name="submit">Submit</string>
    <string name="batal">Batal</string>
    <string name="photo">Photo</string>
    <string name="status">Status</string>
    <string name="number">0</string>
    <string name="send">Terkirim</string>
    <string name="delivered">Tersampaikan</string>
    <string name="responded">Terespond</string>
    <string name="realized">Terealisasikan</string>
    <string name="title_activity_maps">Map</string>

    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>