<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_marginTop="50dp"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddFragment">

    <TextView
        android:id="@+id/tv_tambah"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/tambah_aktivitas"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:paddingStart="16sp"
        android:paddingEnd="16dp"
        android:shadowColor="#FFFFFF"
        android:text="@string/tipe"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFilterButton_addPhoto"
        />

    <RadioGroup
        android:id="@+id/rgroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <RadioButton
            android:id="@+id/rb_aspirasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aspirasi"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="105dp"
            android:background="@drawable/rounded_layout"
            android:layout_marginTop="8dp"/>

        <RadioButton
            android:id="@+id/rb_laporan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_layout"
            android:text="@string/laporan"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="153dp"
            android:layout_marginTop="8dp"/>

        <RadioButton
            android:id="@+id/rb_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/event"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="201dp"
            android:background="@drawable/rounded_layout"
            android:layout_marginTop="8dp"
            />
    </RadioGroup>

    <androidx.constraintlayout.utils.widget.ImageFilterButton
        android:id="@+id/imageFilterButton_addPhoto"
        android:layout_width="150dp"
        android:layout_height="120dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tambah"
        tools:srcCompat="@drawable/ic_baseline_add_a_photo_24"
        android:background="@drawable/rounded_layout"/>

    <EditText
        android:id="@+id/edit_text_judul"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_layout"
        android:ems="10"
        android:inputType="textShortMessage"
        android:lines="1"
        android:hint="@string/judul"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rgroup" />

    <EditText
        android:id="@+id/edit_text_detail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_layout"
        android:ems="10"
        android:inputType="textLongMessage"
        android:lines="1"
        android:hint="@string/detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_judul"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"/>

    <EditText
        android:id="@+id/edit_text_location"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_layout"
        android:ems="10"
        android:hint="@string/location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_detail"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:inputType="textPostalAddress" />

    <Button
        android:id="@+id/btn_submit_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/rounded_layout"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_location" />

    <Button
        android:id="@+id/btn_batal_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="193dp"
        android:layout_marginTop="33dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="22dp"
        android:background="@drawable/rounded_layout"
        android:text="@string/batal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_submit_add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_location" />


</androidx.constraintlayout.widget.ConstraintLayout>