<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat"
        android:text="Aktivitas Disekitar Anda"
        android:textColor="@color/purple"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/text1"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangle_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <ImageView
        android:id="@+id/text2"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangle_5"
        app:layout_constraintStart_toEndOf="@+id/text1"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <ImageView
        android:id="@+id/text3"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangle_5"
        app:layout_constraintStart_toEndOf="@+id/text2"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <ImageView
        android:id="@+id/text4"
        android:layout_width="63dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/rectangle_5"
        app:layout_constraintStart_toEndOf="@+id/text3"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="@+id/text1"
        app:layout_constraintEnd_toEndOf="@+id/text1"
        app:layout_constraintStart_toStartOf="@+id/text1"
        app:layout_constraintTop_toTopOf="@+id/text1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="@+id/text2"
        app:layout_constraintEnd_toEndOf="@+id/text2"
        app:layout_constraintStart_toStartOf="@+id/text2"
        app:layout_constraintTop_toTopOf="@+id/text2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="@+id/text3"
        app:layout_constraintEnd_toEndOf="@+id/text3"
        app:layout_constraintStart_toStartOf="@+id/text3"
        app:layout_constraintTop_toTopOf="@+id/text3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number"
        app:layout_constraintBottom_toBottomOf="@+id/text4"
        app:layout_constraintEnd_toEndOf="@+id/text4"
        app:layout_constraintStart_toStartOf="@+id/text4"
        app:layout_constraintTop_toTopOf="@+id/text4" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/send"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/delivered"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/text2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/responded"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/text3" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/realized"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/text4" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/montserrat"
        android:text="Lacak Aktivitas Saya"
        android:textColor="@color/purple"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title1" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title2"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_aspirasi"/>
</androidx.constraintlayout.widget.ConstraintLayout>